// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AST snapshots > conditionals 1`] = `
[
  {
    "alternate": [
      {
        "content": "no",
        "type": "TEXT",
      },
    ],
    "condition": "if",
    "consequent": [
      {
        "content": "yes",
        "type": "TEXT",
      },
    ],
    "loc": {
      "col": 1,
      "line": 1,
    },
    "name": "a",
    "type": "COND",
  },
  {
    "content": "
",
    "type": "TEXT",
  },
  {
    "alternate": undefined,
    "condition": "unless",
    "consequent": [
      {
        "content": "not b",
        "type": "TEXT",
      },
    ],
    "loc": {
      "col": 1,
      "line": 2,
    },
    "name": "b",
    "type": "COND",
  },
  {
    "content": "
",
    "type": "TEXT",
  },
  {
    "alternate": undefined,
    "condition": "if",
    "consequent": [
      {
        "alternate": undefined,
        "condition": "if",
        "consequent": [
          {
            "content": "both",
            "type": "TEXT",
          },
        ],
        "loc": {
          "col": 12,
          "line": 3,
        },
        "name": "b",
        "type": "COND",
      },
    ],
    "loc": {
      "col": 1,
      "line": 3,
    },
    "name": "a",
    "type": "COND",
  },
]
`;

exports[`AST snapshots > escape variants 1`] = `
[
  {
    "default": undefined,
    "escape": "html",
    "loc": {
      "col": 1,
      "line": 1,
    },
    "name": "a",
    "type": "VAR",
  },
  {
    "content": "
",
    "type": "TEXT",
  },
  {
    "default": undefined,
    "escape": "js",
    "loc": {
      "col": 1,
      "line": 2,
    },
    "name": "b",
    "type": "VAR",
  },
  {
    "content": "
",
    "type": "TEXT",
  },
  {
    "default": undefined,
    "escape": "url",
    "loc": {
      "col": 1,
      "line": 3,
    },
    "name": "c",
    "type": "VAR",
  },
  {
    "content": "
",
    "type": "TEXT",
  },
  {
    "default": undefined,
    "escape": "none",
    "loc": {
      "col": 1,
      "line": 4,
    },
    "name": "d",
    "type": "VAR",
  },
  {
    "content": "
",
    "type": "TEXT",
  },
  {
    "default": undefined,
    "escape": "none",
    "loc": {
      "col": 1,
      "line": 5,
    },
    "name": "e",
    "type": "VAR",
  },
  {
    "content": "
",
    "type": "TEXT",
  },
  {
    "default": undefined,
    "escape": "html",
    "loc": {
      "col": 1,
      "line": 6,
    },
    "name": "f",
    "type": "VAR",
  },
  {
    "content": "
",
    "type": "TEXT",
  },
  {
    "default": undefined,
    "escape": undefined,
    "loc": {
      "col": 1,
      "line": 7,
    },
    "name": "g",
    "type": "VAR",
  },
]
`;

exports[`AST snapshots > html comment syntax 1`] = `
[
  {
    "default": undefined,
    "escape": undefined,
    "loc": {
      "col": 1,
      "line": 1,
    },
    "name": "a",
    "type": "VAR",
  },
  {
    "content": "
",
    "type": "TEXT",
  },
  {
    "alternate": undefined,
    "condition": "if",
    "consequent": [
      {
        "content": "yes",
        "type": "TEXT",
      },
    ],
    "loc": {
      "col": 1,
      "line": 2,
    },
    "name": "b",
    "type": "COND",
  },
  {
    "content": "
",
    "type": "TEXT",
  },
  {
    "body": [
      {
        "default": undefined,
        "escape": undefined,
        "loc": {
          "col": 28,
          "line": 3,
        },
        "name": "d",
        "type": "VAR",
      },
    ],
    "loc": {
      "col": 1,
      "line": 3,
    },
    "name": "c",
    "type": "LOOP",
  },
]
`;

exports[`AST snapshots > loop with context vars 1`] = `
[
  {
    "body": [
      {
        "alternate": undefined,
        "condition": "if",
        "consequent": [
          {
            "content": "[",
            "type": "TEXT",
          },
        ],
        "loc": {
          "col": 18,
          "line": 1,
        },
        "name": "__first__",
        "type": "COND",
      },
      {
        "default": undefined,
        "escape": undefined,
        "loc": {
          "col": 48,
          "line": 1,
        },
        "name": "name",
        "type": "VAR",
      },
      {
        "alternate": undefined,
        "condition": "unless",
        "consequent": [
          {
            "content": ", ",
            "type": "TEXT",
          },
        ],
        "loc": {
          "col": 63,
          "line": 1,
        },
        "name": "__last__",
        "type": "COND",
      },
    ],
    "loc": {
      "col": 1,
      "line": 1,
    },
    "name": "items",
    "type": "LOOP",
  },
]
`;

exports[`AST snapshots > nested loops 1`] = `
[
  {
    "body": [
      {
        "content": "
  ",
        "type": "TEXT",
      },
      {
        "default": undefined,
        "escape": undefined,
        "loc": {
          "col": 3,
          "line": 2,
        },
        "name": "x",
        "type": "VAR",
      },
      {
        "content": "
  ",
        "type": "TEXT",
      },
      {
        "body": [
          {
            "default": undefined,
            "escape": undefined,
            "loc": {
              "col": 27,
              "line": 3,
            },
            "name": "y",
            "type": "VAR",
          },
        ],
        "loc": {
          "col": 3,
          "line": 3,
        },
        "name": "inner",
        "type": "LOOP",
      },
      {
        "content": "
",
        "type": "TEXT",
      },
    ],
    "loc": {
      "col": 1,
      "line": 1,
    },
    "name": "outer",
    "type": "LOOP",
  },
]
`;

exports[`AST snapshots > tmpl_comment stripping 1`] = `
[
  {
    "content": "beforeafter",
    "type": "TEXT",
  },
]
`;

exports[`AST snapshots > unknown tag in lenient mode 1`] = `
[
  {
    "content": "a ",
    "type": "TEXT",
  },
  {
    "content": "<TMPL_BOGUS NAME="x">",
    "type": "TEXT",
  },
  {
    "content": " b ",
    "type": "TEXT",
  },
  {
    "default": undefined,
    "escape": undefined,
    "loc": {
      "col": 27,
      "line": 1,
    },
    "name": "real",
    "type": "VAR",
  },
]
`;

exports[`AST snapshots > vanguard percent vars 1`] = `
[
  {
    "default": undefined,
    "escape": undefined,
    "loc": {
      "col": 1,
      "line": 1,
    },
    "name": "first",
    "type": "VAR",
  },
  {
    "content": " and ",
    "type": "TEXT",
  },
  {
    "default": undefined,
    "escape": undefined,
    "loc": {
      "col": 13,
      "line": 1,
    },
    "name": "second",
    "type": "VAR",
  },
  {
    "content": " and ",
    "type": "TEXT",
  },
  {
    "default": undefined,
    "escape": undefined,
    "loc": {
      "col": 42,
      "line": 1,
    },
    "name": "third",
    "type": "VAR",
  },
]
`;

exports[`AST snapshots > variables and defaults 1`] = `
[
  {
    "default": undefined,
    "escape": undefined,
    "loc": {
      "col": 1,
      "line": 1,
    },
    "name": "title",
    "type": "VAR",
  },
  {
    "content": "
",
    "type": "TEXT",
  },
  {
    "default": undefined,
    "escape": undefined,
    "loc": {
      "col": 1,
      "line": 2,
    },
    "name": "bare",
    "type": "VAR",
  },
  {
    "content": "
",
    "type": "TEXT",
  },
  {
    "default": undefined,
    "escape": undefined,
    "loc": {
      "col": 1,
      "line": 3,
    },
    "name": "unquoted",
    "type": "VAR",
  },
  {
    "content": "
",
    "type": "TEXT",
  },
  {
    "default": "hello",
    "escape": undefined,
    "loc": {
      "col": 1,
      "line": 4,
    },
    "name": "greeting",
    "type": "VAR",
  },
  {
    "content": "
",
    "type": "TEXT",
  },
  {
    "default": "",
    "escape": undefined,
    "loc": {
      "col": 1,
      "line": 5,
    },
    "name": "blank",
    "type": "VAR",
  },
]
`;

exports[`AST snapshots > whitespace around tags 1`] = `
[
  {
    "content": "line one
  ",
    "type": "TEXT",
  },
  {
    "default": undefined,
    "escape": undefined,
    "loc": {
      "col": 3,
      "line": 2,
    },
    "name": "x",
    "type": "VAR",
  },
  {
    "content": "  

line four",
    "type": "TEXT",
  },
]
`;

exports[`AST snapshots with includes > expands a loop body that pulls in an include 1`] = `
[
  {
    "body": [
      {
        "content": "[deepest ",
        "type": "TEXT",
      },
      {
        "default": undefined,
        "escape": undefined,
        "loc": {
          "col": 26,
          "line": 1,
        },
        "name": "deep",
        "type": "VAR",
      },
      {
        "content": "]",
        "type": "TEXT",
      },
    ],
    "loc": {
      "col": 1,
      "line": 1,
    },
    "name": "rows",
    "type": "LOOP",
  },
]
`;

exports[`AST snapshots with includes > expands three levels into a single flat tree 1`] = `
[
  {
    "content": "top ",
    "type": "TEXT",
  },
  {
    "default": undefined,
    "escape": undefined,
    "loc": {
      "col": 5,
      "line": 1,
    },
    "name": "top",
    "type": "VAR",
  },
  {
    "content": " (middle ",
    "type": "TEXT",
  },
  {
    "default": undefined,
    "escape": undefined,
    "loc": {
      "col": 35,
      "line": 1,
    },
    "name": "mid",
    "type": "VAR",
  },
  {
    "content": " [deepest ",
    "type": "TEXT",
  },
  {
    "default": undefined,
    "escape": undefined,
    "loc": {
      "col": 66,
      "line": 1,
    },
    "name": "deep",
    "type": "VAR",
  },
  {
    "content": "])",
    "type": "TEXT",
  },
]
`;
